Don't install packages in tutorials

--- a/03-model/04-lesson/03-04-lesson.Rmd
+++ b/03-model/04-lesson/03-04-lesson.Rmd
@@ -8,8 +8,7 @@ runtime: shiny_prerendered
 ---
 
 ```{r setup, message=FALSE, warning=FALSE, include=FALSE}
-if (!require("pacman")) install.packages("pacman",repos = "http://cran.us.r-project.org")
-pacman::p_load(knitr, learnr, tidyverse, openintro, grid, png, emo, ggplot2, broom)
+# load packages ----------------------------------------------------------------
 
 library(learnr)
 library(tidyverse)
@@ -17,6 +16,9 @@ library(openintro)
 library(grid)
 library(broom)
 library(emo)
+
+# knitr options ----------------------------------------------------------------
+
 knitr::opts_chunk$set(echo = FALSE, 
                       fig.align = "center", 
                       fig.height = 3, 
