Made a separate chunk replicating "ex2-setup" for display.

--- a/02-explore/02-lesson/02-02-lesson.Rmd
+++ b/02-explore/02-lesson/02-02-lesson.Rmd
@@ -795,7 +795,12 @@ Thus, the `%in%` operator always comes with the `c()` function, which makes the 
 
 Putting this all together, our code looks like: 
 
-```{r, ex2-setup, exercise = TRUE}
+```{r echo=TRUE}
+common_cyl <- cars %>%
+  filter(ncyl %in% c(4, 6, 8))
+```
+
+```{r, ex2-setup, echo=FALSE}
 common_cyl <- cars %>%
   filter(ncyl %in% c(4, 6, 8))
 ```
