--- a/02-explore/02-lesson/02-02-lesson.Rmd
+++ b/02-explore/02-lesson/02-02-lesson.Rmd
@@ -792,7 +792,7 @@ Thus, the `%in%` operator always comes with the `c()` function, which makes the 
 
 Putting this all together, our code looks like: 
 
-```{r, ex2-setup, exercise = TRUE}
+```{r, ex2-setup, echo = TRUE}
 common_cyl <- cars %>%
   filter(ncyl %in% c(4, 6, 8))
 ```
