Improving fix #152. Making ex2-setup in tutorial 02-02. (#158)
* Made a separate chunk replicating "ex2-setup" for display.

* Made a separate chunk replicating "ex2-setup" for display.

* fixing

* Modifying to use ref.label in order to avoid duplicating code.

Co-authored-by: mine-cetinkaya-rundel <cetinkaya.mine@gmail.com>

--- a/02-explore/02-lesson/02-02-lesson.Rmd
+++ b/02-explore/02-lesson/02-02-lesson.Rmd
@@ -795,10 +795,15 @@ Thus, the `%in%` operator always comes with the `c()` function, which makes the 
 
 Putting this all together, our code looks like: 
 
-```{r, ex2-setup, exercise = TRUE}
+```{r, ex2-setup, echo=FALSE}
 common_cyl <- cars %>%
   filter(ncyl %in% c(4, 6, 8))
 ```
+
+```{r, ref.label="ex2-setup", echo=TRUE}
+```
+
+
 
 Now, with the `common_cyl` dataset, create overlaid density plots of `city_mpg` colored by `ncyl`.
 Keep in mind that `ncyl` is a numerical variable, so you will need to convert it to a categorical variable to use it as the `fill`. 
