Defining acs12 at the start to avoid "internal error" in this tutorial

--- a/05-infer/07-lesson/05-07-lesson.Rmd
+++ b/05-infer/07-lesson/05-07-lesson.Rmd
@@ -33,6 +33,11 @@ set.seed(421398)
 stem_cell <- stem_cell %>%
   mutate(change = after - before)
 
+acs12 <- acs12 %>%
+  mutate(hrly_pay = income / (hrs_work * 52))
+
+acs12_complete_hrlypay_citizen <- acs12 %>%
+  filter(!is.na(hrly_pay), !is.na(citizen))
 ```
 
 ## Hypothesis testing for a differnece in two means via simulation
