--- a/04-foundations/02-lesson/04-02-lesson.Rmd
+++ b/04-foundations/02-lesson/04-02-lesson.Rmd
@@ -1225,7 +1225,7 @@ gender_discrimination_new_perm %>%
 
 Great work!  Notice that the permutation differences (the two histograms) are essentially the same regardless of whether the original or the new dataset is used. Why do you think that is? 
 
-**Hint:** Does the null hypothesis depend on the dataset, or is it the same for both? 
+Does the null hypothesis depend on the dataset, or is it the same for both? 
 
 ### Calculating two-sided p-values
 
